<resources>
    <string name="app_name">성일정보고</string>

    <string name="menu_notice">공지</string>
    <string name="menu_schedule">일정</string>
    <string name="menu_food">급식</string>
    <string name="menu_home">가정\n통신문</string>
    <string name="menu_job">취업</string>
    <string name="menu_employee_news">취업자\n소식</string>

    <string name="column_title">제목</string>
    <string name="column_name">이름</string>
    <string name="column_hits">조회수</string>
    <string name="column_date_create">등록일</string>
    <string name="column_content">내용</string>
    <string name="column_attach_file1">첨부파일1</string>
    <string name="column_attach_file2">첨부파일2</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
