<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal" >

        <Button
            android:text="@string/menu_notice"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:focusableInTouchMode="true"
            android:id="@+id/btn_notice"
            android:gravity="center"
            android:background="@drawable/selector_widget_menu" />

        <Button
            android:text="@string/menu_schedule"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:focusableInTouchMode="true"
            android:id="@+id/btn_schedule"
            android:gravity="center"
            android:background="@drawable/selector_widget_menu"/>

        <Button
            android:text="@string/menu_food"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:focusableInTouchMode="true"
            android:id="@+id/btn_food"
            android:gravity="center"
            android:background="@drawable/selector_widget_menu"/>

        <Button
            android:text="@string/menu_home"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:focusableInTouchMode="true"
            android:id="@+id/btn_home"
            android:gravity="center"
            android:background="@drawable/selector_widget_menu"/>

        <Button
            android:text="@string/menu_job"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:focusableInTouchMode="true"
            android:id="@+id/btn_job"
            android:gravity="center"
            android:background="@drawable/selector_widget_menu"/>

        <Button
            android:text="@string/menu_employee_news"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:focusableInTouchMode="true"
            android:id="@+id/btn_employee_news"
            android:gravity="center"
            android:background="@drawable/selector_widget_menu"/>

    </LinearLayout>

</LinearLayout>