<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:background="@color/devider_color"/>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="17dp"
                android:paddingBottom="17dp">

                <TextView
                    android:text="@string/column_title"
                    android:textColor="@color/list_item_notice_index_color"
                    android:textSize="15dp"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView2"
                    android:gravity="center_horizontal" />

                <TextView
                    android:text="-"
                    android:textColor="@color/list_item_notice_index_color"
                    android:textSize="15dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_title"
                    android:layout_weight="1" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/devider_color"/>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="17dp"
                android:paddingTop="17dp">

                <TextView
                    android:text="@string/column_name"
                    android:textColor="@color/list_item_notice_index_color"
                    android:textSize="15dp"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView4"
                    android:gravity="center_horizontal" />

                <TextView
                    android:text="-"
                    android:textColor="@color/list_item_notice_index_color"
                    android:textSize="15dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_name"
                    android:layout_weight="1" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/devider_color"/>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="17dp"
                android:paddingTop="17dp">

                <TextView
                    android:text="@string/column_hits"
                    android:textColor="@color/list_item_notice_index_color"
                    android:textSize="15dp"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView6"
                    android:gravity="center_horizontal" />

                <TextView
                    android:text="-"
                    android:textColor="@color/list_item_notice_index_color"
                    android:textSize="15dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_hits"
                    android:layout_weight="1" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/devider_color"/>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="17dp"
                android:paddingTop="17dp">

                <TextView
                    android:text="@string/column_date_create"
                    android:textColor="@color/list_item_notice_index_color"
                    android:textSize="15dp"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView8"
                    android:gravity="center_horizontal" />

                <TextView
                    android:text="-"
                    android:textColor="@color/list_item_notice_index_color"
                    android:textSize="15dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_date"
                    android:layout_weight="1" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/devider_color"/>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingBottom="17dp"
                android:paddingTop="17dp">

                <TextView
                    android:text="@string/column_content"
                    android:textColor="@color/list_item_notice_index_color"
                    android:textSize="15dp"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView10"
                    android:gravity="center_horizontal" />

                <TextView
                    android:text="-"
                    android:textColor="@color/list_item_notice_index_color"
                    android:textSize="15dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_content"
                    android:layout_weight="1" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/devider_color"/>

            <LinearLayout
                android:id="@+id/ll_attach1"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingBottom="17dp"
                android:paddingTop="17dp"
                android:visibility="gone">

                <TextView
                    android:text="@string/column_attach_file1"
                    android:textColor="@color/list_item_notice_index_color"
                    android:textSize="15dp"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal" />

                <TextView
                    android:text="-"
                    android:textColor="@color/list_item_notice_index_color"
                    android:textSize="15dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_attachfile1"
                    android:layout_weight="1" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/devider_color"/>

            <LinearLayout
                android:id="@+id/ll_attach2"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingBottom="17dp"
                android:paddingTop="17dp"
                android:visibility="gone">

                <TextView
                    android:text="@string/column_attach_file2"
                    android:textColor="@color/list_item_notice_index_color"
                    android:textSize="15dp"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal" />

                <TextView
                    android:text="-"
                    android:textColor="@color/list_item_notice_index_color"
                    android:textSize="15dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_attachfile2"
                    android:layout_weight="1" />
            </LinearLayout>


        </LinearLayout>
    </ScrollView>
            android:layout_width="wrap_content"

    <com.sungil_i.user.sihschool.widget.Menus
        android:id="@+id/menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </com.sungil_i.user.sihschool.widget.Menus>
</LinearLayout>